@@ -186,6 +186,9 @@ Other
 
 * LUCENE-6292: Seed StringHelper better. (Robert Muir)
 
+* LUCENE-6333: Refactored queries to delegate their equals and hashcode
+  impls to the super class. (Lee Hinman via Adrien Grand)
+
 Changes in Runtime Behavior
 
 * LUCENE-6255: PhraseQuery now ignores leading holes and requires that
